test/types/range/lydia/badRange-string-lower.good
badRange-string-lower.chpl:1: In function 'main':
badRange-string-lower.chpl:2: error: lower bound of param for loop must be an int, uint, or bool
badRange-string-lower.chpl:2: error: lower bound and upper bound of param for loop expected to be of the same type
badRange-string-lower.chpl:2: error: lower bound and stride of param for loop expected to be of the same type
